[metadata]
name = oscontainer
version = 1.0.1
author = Iaroslav Omelianenko
author_email = yaric_mail@yahoo.com
description = The small Python library to read resources available for Linux OS container.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yaricom/oscontainer
project_urls =
    Docs = https://github.com/yaricom/oscontainer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude = tests