[metadata]
name = oscontainer
version = 1.0.2
author = Iaroslav Omelianenko
author_email = yaric_mail@yahoo.com
description = The small Python library to read resources available for Linux OS container.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yaricom/oscontainer
project_urls =
    Docs = https://github.com/yaricom/oscontainer
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.packages.find]
exclude = tests